# yandex-checkout-rs

./: Cargo.toml  LICENSE  README.md  appveyor.yml
examples/: async_payment.rs  payment.rs
src/: client.rs  common.rs  config.rs  error.rs  lib.rs  payment_service.rs  refund_service.rs  settings_service.rs
src/async/: mod.rs  payment_service.rs  refund_service.rs  settings_service.rs
src/models/: airline.rs  amount.rs  authorization_details.rs  cancellation_details.rs  card.rs  confirmation.rs  metadata.rs  mod.rs  payer_bank_details.rs  payment.rs  payment_method.rs  receipt.rs  recipient.rs  refund.rs  vat_data.rs
tests/testsuite/: main.rs
tests/testsuite/mapping/: mod.rs  new_payment.rs  payment.rs  payment_api_error.rs
tests/testsuite/mapping/json/: canceled_payment.json  captured_payment.json  created_payment.json  new_payment.json  no_captured_payment.json  payments_api_error.json
