[package]
name = "yandex_checkout"
version = "0.1.0"
authors = ["Alexander Andreev <andreevlex.as@gmail.com>"]
description = "Yandex.Checkout API Rust Client Library."
homepage = "https://github.com/andreevlex/yandex-checkout-rs"
repository = "https://github.com/andreevlex/yandex-checkout-rs"
documentation = "https://docs.rs/yandex-checkout"
keywords = ["yandex-kassa", "api-client"]
readme = "README.md"
license = "MIT"
edition = "2018"

exclude = [
    "appveyor.yml",
    ".travis.yml",
    ".gitignore",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
iso4217 = "0.3.2"
reqwest = "0.9.18"
failure = "0.1.5"
log ="0.4.6"
uuid = "0.7.4"
futures = "0.1.27"

[dev-dependencies]
tokio = "0.1.21"
env_logger = "0.6.1"